# TaskAI

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/skills/: MCP.md
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: health.py
backend/src/core/: config.py  logging.py
backend/src/mcp/: agent.py  tools.py
backend/src/middleware/: correlation.py  logging.py  metrics.py  tracing.py
backend/src/models/: tag.py  task.py
backend/src/services/: reminder_scheduler.py  tasks.py
backend/src/services/events/: publisher.py
backend/src/utils/: date_parser.py
dapr/components/: kafka-pubsub-digitalocean.yaml  kafka-pubsub.yaml  secrets.yaml  statestore-digitalocean.yaml  subscription-reminders.yaml  subscription-task-events.yaml
dapr/components-k8s/: kafka-pubsub.yaml  subscription-reminders.yaml  subscription-task-events.yaml
dapr/deployment/: 01-kafka-pubsub-component.yaml  02-subscription-task-events.yaml  03-subscription-reminders.yaml
frontend/: Dockerfile  package.json  tailwind.config.ts
helm/todo-chatbot/: helm-values-dapr-enabled.yaml  values-digitalocean.yaml  values-minikube.yaml  values.yaml
infra/minikube/: kafka-cluster.yaml
notification-service/: Dockerfile  pyproject.toml
notification-service/src/: main.py
recurring-service/: Dockerfile  pyproject.toml
recurring-service/src/: main.py
scripts/: README.md  deploy-all.sh  deploy-backend.sh  deploy-dapr-enabled.sh  deploy-digitalocean.sh  deploy-frontend.sh  deploy-minikube.ps1  deploy-minikube.sh  deploy-notification-service.sh  deploy-recurring-service.sh  verify-deployment.sh
(+86 files in other folders)
